[package]
name = "quickbloom"
version = "0.2.0"
edition = "2021"
authors = ["Rasesh Shetty"]
license = "MIT"
description = "An industry-grade, highly scalable Bloom filter with lock-free concurrency, blocked layout, and automatic persistence."
repository = "https://github.com/Rasesh2005/quickbloom"
keywords = ["bloom-filter", "probabilistic", "datastructures"]
categories = ["data-structures", "algorithms"]

[dependencies]
bitvec = "1.0"
# ahash: fastest non-cryptographic hasher for short keys, ideal for Bloom filters
ahash = "0.8"

[dev-dependencies]
rand = "0.8"
criterion = "0.4"

[[bench]]
name = "bloom_bench"
harness = false
